--- a/templates/login.html
+++ b/templates/login.html
@@ -111,6 +111,23 @@
     </div>
   </div>
   <div class="container">
+    {% if Registered %}
+    <div class="row justify-content-center mt-2">
+      <div class="col-auto">
+        <div class="toast show" data-autohide="false">
+          <div class="toast-header">
+            <strong class="mr-auto text-primary">Registered successfully</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      $(document).ready(function () {
+        $('.toast').toast('show');
+      });
+    </script>
+    {% endif %}
     <div class="row mt-3 mb-5 pb-3 justify-content-center">
       <div class="col-lg-4 col-md-6 col-sm-8 col-xs-10 mx-2 p-3 border rounded log-in-panel">
         <div class="text-center border border-top-0 border-right-0 border-left-0 mb-2">
