--- a/templates/login.html
+++ b/templates/login.html
@@ -111,7 +111,7 @@
     </div>
   </div>
   <div class="container">
-    {% if Registered %}
+    {% if registered %}
     <div class="row justify-content-center mt-2">
       <div class="col-auto">
         <div class="toast show" data-autohide="false">
