--- a/templates/test.html
+++ b/templates/test.html
@@ -53,7 +53,7 @@
         };
 
         function onLoad(d) {
-            // duration = d;
+            duration = d;
             interval = setInterval(updateDuration, 1000);
             timeComponent = document.getElementById("timer");
         }
