--- a/templates/questions.html
+++ b/templates/questions.html
@@ -41,7 +41,7 @@
                           <div class="card-header">
                             <div class="row">
                               <div class="col">
-                                {{question.question|safe}}
+                                {{question.id}} : {{question.question|safe}}
                                 <div class="w-100"></div>
                                 <img class="img-fluid" src="/uploads/{{question.image}}" alt="">
                               </div>
