Displaying number of questions

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -22,7 +22,7 @@
                     <div class="row">
                       <a class="col card-link" data-toggle="collapse"
                         href="#subcategory{{category.id}}{{subcategory.id}}">
-                        {{subcategory.title}}
+                        {{subcategory.title}} | {{subcategory.questions|length}}
                       </a>
                       <div class="col-auto ml-auto">
                         <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
